--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   "scripts": {
     "start": "node ./",
     "build": "tsc -p .",
+    "buildconteiner":"tsc",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts"
-  },
-  "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "ts-node-dev": "^1.1.8",
-    "tsc": "^2.0.4",
-    "typescript": "^4.6.2"
   },
   "dependencies": {
     "aws-sdk": "^2.1093.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.2",
+    "tsc": "^2.0.4"
+   
   }
 }
